--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
-CTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Waste Management System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css"> 
 </head>
 <body>
     <!-- Navbar -->
@@ -32,22 +32,33 @@ CTYPE html>
     <!-- Main Content -->
     <div class="container mt-5">
         <div class="jumbotron">
-            <h1 class="display-4">Welcome to the Smart Waste Management System</h1>
+            <h1 class="display-4">Welcome To The Smart Waste Management System</h1>
             <p class="lead">Manage your waste collection schedules, track your recycling efforts, and view your environmental impact.</p>
             <hr class="my-4">
-            <p>Get started by registering or logging in.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Register</a>
+            <p>Our system enhances waste collection, recycling, and resource management through intelligent technologies.</p>
+            <p>Household users can schedule waste collection, track recycling efforts, and view environmental impact metrics. Waste collection services can manage routes, schedules, and track performance. Administrators have access to an admin dashboard for monitoring overall system performance and managing users.</p>
+            <a class="btn btn-primary btn-lg mr-2" href="#" role="button">Register</a>
             <a class="btn btn-secondary btn-lg" href="#" role="button">Login</a>
         </div>
     </div>
 
+    <!-- Image Section -->
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2 text-center">
+                <img src="https://t3.ftcdn.net/jpg/05/45/69/52/240_F_545695283_DnBHUF7Qx4QZqwckQenRYKFs29giKIsK.jpg" class="img-fluid rounded" alt="Home Image">
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
-    <footer class="footer bg-light py-3">
+    <footer class="footer bg-light py-3 mt-5">
         <div class="container">
             <span class="text-muted">© 2024 Smart Waste Management System</span>
         </div>
     </footer>
 
+    <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
