--- a/public/register.html
+++ b/public/register.html
@@ -1,80 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register - Smart Waste Management</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
-    }
-    .container {
-      text-align: center;
-      background: white;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    .container h1 {
-      margin-bottom: 1rem;
-    }
-    .container form {
-      display: flex;
-      flex-direction: column;
-    }
-    .container form input {
-      padding: 0.75rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .container form button {
-      padding: 0.75rem;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .container form button:hover {
-      background-color: #45a049;
-    }
-    .container a {
-      margin-top: 1rem;
-      display: inline-block;
-      color: #4CAF50;
-      text-decoration: none;
-    }
-    .container a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register - Waste Zero</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background: url('https://t3.ftcdn.net/jpg/01/76/68/76/240_F_176687625_gWZyemtM1kJifQTkPTLVDBL0aNsdzMWW.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+        }
+        .navbar-brand {
+            font-weight: bold;
+            color: #fff;
+        }
+        .nav-link {
+            color: #fff !important;
+        }
+        .card {
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+        }
+        .footer {
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+        }
+        .register-heading {
+            text-align: center;
+            color: #007bff; /* Blue color */
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        .register-description {
+            text-align: center;
+            color: #ffffff; /* white  color*/
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Register</h1>
-    <form id="registerForm" action="/register" method="post">
-      <input type="text" name="username" placeholder="Username" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <input type="password" name="confirmPassword" placeholder="Confirm Password" required>
-      <button type="submit">Register</button>
-    </form>
-    <a href="login.html">Already have an account? Login</a>
-  </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">wastezero</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Login</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  <script>
-    // Ensure the form is reset on page load
-    window.addEventListener('load', function() {
-      document.getElementById('registerForm').reset();
-    });
-  </script>
+    <!-- Main Content -->
+    <div class="container mt-5">
+        <h1 class="display-4 register-heading">REGISTER</h1>
+        <p class="lead register-description">Create an account to manage your waste collection schedules, track your recycling efforts, and view your environmental impact.</p>
+        <hr class="my-4">
+
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <!-- Registration Form -->
+                <form id="registerForm" class="card p-4">
+                    <div class="form-group">
+                        <label for="registerUsername">Username</label>
+                        <input type="text" class="form-control" id="registerUsername" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerEmail">Email</label>
+                        <input type="email" class="form-control" id="registerEmail" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerPassword">Password</label>
+                        <input type="password" class="form-control" id="registerPassword" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Register</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer py-3 mt-5">
+        <div class="container text-center">
+            <span class="text-muted">© 2024 Waste Zero Management system</span>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
