--- a/public/login.html
+++ b/public/login.html
@@ -1,76 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Smart Waste Management</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
-    }
-    .container {
-      text-align: center;
-      background: white;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    .container h1 {
-      margin-bottom: 1rem;
-    }
-    .container form {
-      display: flex;
-      flex-direction: column;
-    }
-    .container form input {
-      padding: 0.75rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .container form button {
-      padding: 0.75rem;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .container form button:hover {
-      background-color: #45a049;
-    }
-    .container a {
-      margin-top: 1rem;
-      display: inline-block;
-      color: #4CAF50;
-      text-decoration: none;
-    }
-    .container a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Smart Waste Management System</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background: url('https://t3.ftcdn.net/jpg/07/03/33/54/240_F_703335448_m0yE54yGmqxvxP8WmTCDDBCX6pa4Buvx.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fff;
+            font-family: 'Arial', sans-serif;
+        }
+        .navbar-brand {
+            font-weight: bold;
+            color: #fff;
+        }
+        .nav-link {
+            color: #fff !important;
+        }
+        .card {
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.7);
+        }
+        .footer {
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            font-size: 14px;
+        }
+        .login-heading {
+            text-align: center;
+            color: #28a745; /* Green color */
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 20px;
+        }
+        .login-description {
+            text-align: center;
+            color: #f8f9fa; /* Light gray color */
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-bottom: 30px;
+        }
+        .login-form {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 30px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+        .login-footer {
+            color: #f8f9fa; /* Light gray color */
+            font-size: 14px;
+            margin-top: 20px;
+        }
+        .login-footer a {
+            color: #28a745; /* Green color */
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .login-footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Login</h1>
-    <form id="loginForm" action="/login" method="post">
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-    <a href="register.html">Don't have an account? Register</a>
-  </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Waste Zero</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="register.html">Register</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  <script>
-    // Reset the form on page load
-    document.getElementById('loginForm').reset();
-  </script>
+    <!-- Main Content -->
+    <div class="container mt-5">
+        <h1 class="display-4 login-heading">Welcome Back!</h1>
+        <p class="lead login-description">Log in to manage your waste collection schedules, track your recycling efforts, and view your environmental impact.</p>
+        <hr class="my-4">
+
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <!-- Login Form -->
+                <form id="loginForm" class="card login-form">
+                    <div class="form-group">
+                        <label for="loginEmail">Email</label>
+                        <input type="email" class="form-control" id="loginEmail" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="loginPassword">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                </form>
+                <p class="text-center login-footer">Forgot your password? <a href="#" class="font-weight-bold">Reset here</a></p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer py-3 mt-5">
+        <div class="container text-center">
+            <span class="text-muted">© 2024 Waste Zero Management System</span>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script> <!-- Include your login JavaScript -->
 </body>
 </html>
+
+
