--- a/public/home.html
+++ b/public/home.html
@@ -118,7 +118,7 @@
                             <span class="feature-icon">&#x267B;</span>
                             <h5 class="card-title">Recycling Tracker</h5>
                             <p class="card-text">Track your recycling efforts and view environmental impact.</p>
-                            <a href="#" class="btn btn-primary">Track Recycling</a>
+                            <a href="recycling.html" class="btn btn-primary">Track Recycling</a>
                         </div>
                     </div>
                 </div>
@@ -214,5 +214,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
