--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Smart Waste Management System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
     <style>
         body {
             background: url('https://t3.ftcdn.net/jpg/07/03/33/54/240_F_703335448_m0yE54yGmqxvxP8WmTCDDBCX6pa4Buvx.jpg') no-repeat center center fixed;
@@ -121,8 +120,4 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script> <!-- Include your login JavaScript -->
-</body>
-</html>
-
-
+    <script src="script.js"></script>
