--- a/public/recycling.html
+++ b/public/recycling.html
@@ -127,7 +127,7 @@
     <h1>Track Recycling Efforts</h1>
     <nav>
       <ul>
-        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="home.html">Dashboard</a></li>
         <li><a href="login.html">Logout</a></li>
       </ul>
     </nav>
@@ -155,7 +155,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 Smart Waste Management</p>
+    <p>&copy; 2024 Waste Zero Management System</p>
   </footer>
 
   <script>
