--- a/public/schedule.html
+++ b/public/schedule.html
@@ -34,13 +34,13 @@
 
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="schedule-form">
+                <div class="schedule-form" id="scheduleForm">
                     <form>
-                        <div class="form-group">
+                        <div class="form-group" id="collectionDate">
                             <label for="collectionDate">Select Date</label>
                             <input type="date" class="form-control" id="collectionDate" required>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" id="collectionTime">
                             <label for="collectionTime">Select Time</label>
                             <input type="time" class="form-control" id="collectionTime" required>
                         </div>
@@ -62,6 +62,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
