--- a/public/viewreport.html
+++ b/public/viewreport.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Environmental report  Metrics</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       font-family: 'Roboto', sans-serif;
@@ -104,10 +103,10 @@
     <h1>Environmental Impact Metrics</h1>
     <nav>
       <ul>
-        <li><a href="dashboard.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="schedule.html">Waste Collection Schedules</a></li>
         <li><a href="recycling.html">Track Recycling Efforts</a></li>
-        <li><a href="viewreports.html">Environmental report Metrics</a></li>
+        <li><a href="viewreport.html">Environmental report Metrics</a></li>
         <li><a href="login.html">Logout</a></li> <!-- Redirects to login page -->
       </ul>
     </nav>
