--- a/public/schedule.html
+++ b/public/schedule.html
@@ -36,17 +36,27 @@
             <div class="col-md-6">
                 <div class="schedule-form" id="scheduleForm">
                     <form>
-                        <div class="form-group" id="collectionDate">
+                        <div class="form-group">
                             <label for="collectionDate">Select Date</label>
                             <input type="date" class="form-control" id="collectionDate" required>
                         </div>
-                        <div class="form-group" id="collectionTime">
+                        <div class="form-group">
                             <label for="collectionTime">Select Time</label>
                             <input type="time" class="form-control" id="collectionTime" required>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Schedule Collection</button>
                     </form>
                 </div>
+            </div>
+        </div>
+
+        <!-- Schedule List -->
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-6">
+                <h3 class="text-center">Scheduled Collections</h3>
+                <ul id="collectionList" class="list-group">
+                    <!-- Schedule items will be added here by JavaScript -->
+                </ul>
             </div>
         </div>
     </div>
@@ -65,5 +75,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
